--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.8",
     "gulp.spritesmith": "^6.2.1"
+  },
+  "dependencies": {
+    "gulp-file-include": "^2.0.0"
   }
 }
